# microModel

./: .gitignore  README.md  pyproject.toml
configs/: config_sl.yaml  config_ssl_dinov3.yaml
src/microModel/: __init__.py  cli.py  inference.py  train_sl.py  train_ssl_dinov3.py
src/microModel/dataset/: __init__.py  _shared.py  augmentation_ssl.py  cell_dataset.py  cell_dataset_ssl.py  preprocess.py
src/microModel/model/: __init__.py  heads.py  losses.py  model.py
src/microModel/utils/: __init__.py  analysis.py  config.py  training.py  utils.py
test/: create_single_testdata.py  run_all.py
test/testdata_single/A/: cell_0.tiff  cell_1.tiff  cell_2.tiff  cell_3.tiff  cell_4.tiff
test/testdata_single/B/: cell_0.tiff  cell_1.tiff  cell_2.tiff  cell_3.tiff  cell_4.tiff
test/testdata_single/C/: cell_0.tiff  cell_1.tiff  cell_2.tiff  cell_3.tiff  cell_4.tiff
